variables.Variables.scala.error
Erreur de compilation :
Variables:7: error: value =! is not a member of Int
if (nbPas =! 0) {
          ^